# src/routes/beers.js
@@ -8,6 +8,7 @@ import {
 } from '../controllers/beersController.js';
 import { body, param, query } from 'express-validator';
 import { runValidation } from '../middleware/validate.js';
+import authMiddleware from '../middleware/auth.js';
 
 const router = Router();
 
@@ -22,7 +23,7 @@ router.get(
     query('brewery').optional().isMongoId().withMessage('invalid brewery id'),
     query('style').optional().isString().trim().isLength({ min: 1, max: 50 }),
     query('q').optional().isString().trim().isLength({ min: 1, max: 100 }),
-    query('populate').optional().isIn(['true', 'false']).withMessage('populate true|false')
+    query('populate').optional().isIn(['true', 'false']).withMessage('populate true|false'),
   ],
   runValidation,
   listBeers
@@ -39,24 +40,26 @@ router.get(
   getBeer
 );
 
-// CREATE
+// CREATE (protected)
 router.post(
   '/',
+  authMiddleware,
   [
     body('name').isString().trim().isLength({ min: 2, max: 100 }).withMessage('name 2..100'),
     body('style').isString().trim().isLength({ min: 2, max: 50 }).withMessage('style 2..50'),
     body('breweryId').isMongoId().withMessage('breweryId must be a valid id'),
     body('abv').isFloat({ min: 0, max: 20 }).withMessage('abv 0..20'),
     body('ibu').optional().isInt({ min: 0, max: 120 }).withMessage('ibu 0..120'),
-    body('description').optional().isString().isLength({ max: 500 })
+    body('description').optional().isString().isLength({ max: 500 }),
   ],
   runValidation,
   createBeer
 );
 
-// UPDATE
+// UPDATE (protected)
 router.put(
   '/:id',
+  authMiddleware,
   [
     param('id').isMongoId().withMessage('Invalid ID format'),
     body('name').optional().isString().trim().isLength({ min: 2, max: 100 }).withMessage('name 2..100'),
@@ -64,15 +67,16 @@ router.put(
     body('breweryId').optional().isMongoId().withMessage('breweryId invalid'),
     body('abv').optional().isFloat({ min: 0, max: 20 }).withMessage('abv 0..20'),
     body('ibu').optional().isInt({ min: 0, max: 120 }).withMessage('ibu 0..120'),
-    body('description').optional().isString().isLength({ max: 500 })
+    body('description').optional().isString().isLength({ max: 500 }),
   ],
   runValidation,
   updateBeer
 );
 
-// DELETE
+// DELETE (protected)
 router.delete(
   '/:id',
+  authMiddleware,
   [param('id').isMongoId().withMessage('Invalid ID format')],
   runValidation,
   deleteBeer
